--- a/src/credit_institute_scraper/dashapp/assets/app.css
+++ b/src/credit_institute_scraper/dashapp/assets/app.css
@@ -37,7 +37,7 @@
 .container {
   position: relative;
   width: 100%;
-  max-width: 1560px;
+  max-width: 100%;
   margin: 0 auto;
   padding: 0 1px;
   box-sizing: border-box; }
