--- a/src/credit_institute_scraper/dashapp/assets/style.css
+++ b/src/credit_institute_scraper/dashapp/assets/style.css
@@ -15,6 +15,14 @@ h1, h2, h3, h4, h5, h6, p, .form-label {
     margin: 3% 5%;
 }
 
+.sidebar-btn, .sidebar-btn:hover {
+    color: #FFFFFF;
+    position: absolute;
+    left: 0.8rem;
+    bottom: 0;
+    width: 90%;
+}
+
 .app__header {
     display: flex;
     justify-content: space-between;
