--- a/src/credit_institute_scraper/dashapp/assets/style.css
+++ b/src/credit_institute_scraper/dashapp/assets/style.css
@@ -18,9 +18,8 @@ h1, h2, h3, h4, h5, h6, p, .form-label {
 .sidebar-btn, .sidebar-btn:hover {
     color: #FFFFFF;
     position: absolute;
-    left: 0.8rem;
     bottom: 0;
-    width: 90%;
+    z-index: 9999;
 }
 
 .app__header {
