--- a/src/credit_institute_scraper/dashapp/assets/style.css
+++ b/src/credit_institute_scraper/dashapp/assets/style.css
@@ -28,8 +28,9 @@ h1, h2, h3, h4, h5, h6, p, .form-label {
 
 .app__header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     color: #fff;
+    font-family: "Segoe UI", sans-serif;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
