--- a/src/credit_institute_scraper/dashapp/assets/style.css
+++ b/src/credit_institute_scraper/dashapp/assets/style.css
@@ -124,6 +124,10 @@ h1, h2, h3, h4, h5, h6, p, .form-label {
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
+.sidebar {
+    box-shadow: 0.5rem 0.4rem #9E9D9D;
+}
+
 .first {
     margin-bottom: 15px;
 }
