--- a/src/credit_institute_scraper/dashapp/assets/style.css
+++ b/src/credit_institute_scraper/dashapp/assets/style.css
@@ -26,6 +26,13 @@ h1, h2, h3, h4, h5, h6, p, .form-label {
     z-index: 9999;
 }
 
+.spinner {
+    position: absolute;
+    top: 40vh;
+    left: 50%;
+    z-index: 9999;
+}
+
 .app__header {
     display: flex;
     justify-content: center;
