--- a/src/credit_institute_scraper/dashapp/assets/style.css
+++ b/src/credit_institute_scraper/dashapp/assets/style.css
@@ -21,7 +21,7 @@ h1, h2, h3, h4, h5, h6, p, .form-label {
 
 .sidebar-btn, .sidebar-btn:hover {
     color: #FFFFFF;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     z-index: 9999;
 }
