--- a/src/credit_institute_scraper/dashapp/assets/style.css
+++ b/src/credit_institute_scraper/dashapp/assets/style.css
@@ -11,6 +11,11 @@ h1, h2, h3, h4, h5, h6, p, .form-label {
     color: #000000;
 }
 
+.uptime_indicator {
+    color: #FFFFFF;
+    margin-bottom: 2rem;
+}
+
 .app__container {
     margin: 3% 5%;
 }
